--- a/interactiveTest.html
+++ b/interactiveTest.html
@@ -3,13 +3,17 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Interactive test funcSug</title>
+		<link rel="shortcut icon" href="#">
 	</head>
 
 	<body>
 		First, see results in console.<br>Then:
 		<button id="theButton">Click me</button>
+		<script src="libStd.fs" type="application/funcsug"></script>
+		<script src="interactiveTest.fs" type="application/funcsug"></script>
 		<script src="parser.js"></script>
 		<script src="interpreter.js"></script>
+		<script src="DOMloader.js"></script>
 		<script src="interactiveTest.js"></script>
 	</body>
 </html>
