--- a/interactiveTest.html
+++ b/interactiveTest.html
@@ -4,16 +4,20 @@
 		<meta charset="utf-8" />
 		<title>Interactive test funcSug</title>
 		<link rel="shortcut icon" href="#">
+		<link rel="stylesheet" href="main.css">
 	</head>
 
 	<body>
 		First, see results in console.<br>Then:
 		<button id="theButton">Click me</button>
+<!--
+		<p id="" contentEditable="true"></p>
+-->
 		<script src="libStd.fs" type="application/funcsug"></script>
+		<script src="libDOM.fs" type="application/funcsug"></script>
 		<script src="interactiveTest.fs" type="application/funcsug"></script>
 		<script src="parser.js"></script>
 		<script src="interpreter.js"></script>
 		<script src="DOMloader.js"></script>
-		<script src="interactiveTest.js"></script>
 	</body>
 </html>
