--- a/interactiveTest.html
+++ b/interactiveTest.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>Interactive test funcSug</title>
 		<link rel="shortcut icon" href="#">
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="lib.css">
 	</head>
 
 	<body>
@@ -13,9 +13,9 @@
 <!--
 		<p id="" contentEditable="true"></p>
 -->
-		<script src="libStd.fs" type="application/funcsug"></script>
-		<script src="libDOM.fs" type="application/funcsug"></script>
-		<script src="interactiveTest.fs" type="application/funcsug"></script>
+		<script src="libStd.fg" type="application/funcsug"></script>
+		<script src="libDOM.fg" type="application/funcsug"></script>
+		<script src="interactiveTest.fg" type="application/funcsug"></script>
 		<script src="parser.js"></script>
 		<script src="interpreter.js"></script>
 		<script src="DOMloader.js"></script>
