--- a/guessTheNumber.html
+++ b/guessTheNumber.html
@@ -4,13 +4,17 @@
 		<meta charset="utf-8" />
 		<title>Guess the number</title>
 		<link rel="shortcut icon" href="#">
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="lib.css">
+		<link rel="stylesheet" href="guessTheNumber.css">
 	</head>
 
 	<body>
-		<script src="libStd.fs" type="application/funcsug"></script>
-		<script src="libDOM.fs" type="application/funcsug"></script>
-		<script src="guessTheNumber.fs" type="application/funcsug"></script>
+		<p id="head">Score: <span id="score">0</span></p>
+		<div id="gameBoard"></div>
+		<div id="foot"><button id="giveUp" disabled>I give up!</button></div>
+		<script src="libStd.fg" type="application/funcsug"></script>
+		<script src="libDOM.fg" type="application/funcsug"></script>
+		<script src="guessTheNumber.fg" type="application/funcsug"></script>
 		<script src="parser.js"></script>
 		<script src="interpreter.js"></script>
 		<script src="DOMloader.js"></script>
