--- a/guessTheNumber.html
+++ b/guessTheNumber.html
@@ -9,9 +9,13 @@
 	</head>
 
 	<body>
-		<p id="head">Score: <span id="score">0</span></p>
+		<header>
+			<p id="levelHead">Level: <span id="level">1</span></p>
+			<p id="scoreHead">Score: <span id="score">0</span></p>
+		</header>
 		<div id="gameBoard"></div>
 		<div id="foot"><button id="giveUp" disabled>I give up!</button></div>
+		
 		<script src="libStd.fg" type="application/funcsug"></script>
 		<script src="libDOM.fg" type="application/funcsug"></script>
 		<script src="guessTheNumber.fg" type="application/funcsug"></script>
