Update and rename test.html to tests/test.html

--- a/tests/test.html
+++ b/tests/test.html
@@ -7,8 +7,8 @@
 
 	<body>
 		See results in console.
-		<script src="parser.js"></script>
-		<script src="interpreter.js"></script>
+		<script src="../parser.js"></script>
+		<script src="../interpreter.js"></script>
 		<script src="tests.js"></script>
 	</body>
 </html>
