Update and rename interactiveTest.html to tests/interactiveTest.html

--- a/tests/interactiveTest.html
+++ b/tests/interactiveTest.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>Interactive test funcSug</title>
 		<link rel="shortcut icon" href="#">
-		<link rel="stylesheet" href="lib.css">
+		<link rel="stylesheet" href="../lib.css">
 	</head>
 
 	<body>
@@ -13,11 +13,11 @@
 <!--
 		<p id="" contentEditable="true"></p>
 -->
-		<script src="libStd.fg" type="application/funcsug"></script>
-		<script src="libDOM.fg" type="application/funcsug"></script>
+		<script src="../libStd.fg" type="application/funcsug"></script>
+		<script src="../libDOM.fg" type="application/funcsug"></script>
 		<script src="interactiveTest.fg" type="application/funcsug"></script>
-		<script src="parser.js"></script>
-		<script src="interpreter.js"></script>
-		<script src="DOMloader.js"></script>
+		<script src="../parser.js"></script>
+		<script src="../interpreter.js"></script>
+		<script src="../DOMloader.js"></script>
 	</body>
 </html>
