--- a/tests/interactiveTest.html
+++ b/tests/interactiveTest.html
@@ -10,6 +10,7 @@
 	<body>
 		First, see results in console.<br>Then:
 		<button id="theButton">Click me</button>
+		<button id="theButton2">Click me too</button>
 <!--
 		<p id="" contentEditable="true"></p>
 -->
