--- a/tests/interactiveTest.html
+++ b/tests/interactiveTest.html
@@ -11,6 +11,7 @@
 		First, see results in console.<br>Then:
 		<button id="theButton">Click me</button>
 		<button id="theButton2">Click me too</button>
+		<img id="theImage">
 <!--
 		<p id="" contentEditable="true"></p>
 -->
